add tqdm for download visualization

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 art==6.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
+colorama==0.4.6
 idna==3.6
 phonenumbers==8.13.32
 requests==2.31.0
+tqdm==4.66.2
 urllib3==2.2.1
